CSS adjustment - fix navigation z-index

--- a/src/main/webapp/dspResources/css/front-end/main.css
+++ b/src/main/webapp/dspResources/css/front-end/main.css
@@ -6344,6 +6344,7 @@ td.visible-print {
   margin-bottom: 0;
 }
 .primary-nav {
+  z-index: 1001;
   margin-bottom: 0;
   border-radius: 0;
   padding: 15px 0;
